I am join the application

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <body>
         <h1>
             I am Nirmal Prasanjith
+
         </h1>
+        <h1>Hi I'm join the project</h1>
     </body>
 </html>
