--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
         </h1>
         <h1>Hi I'm join the project</h1>
-        <h1>Adding new thing</h1>
+        <h1>Adding new things</h1>
     </body>
 </html>
